--- a/app/views/checks/index.html.erb
+++ b/app/views/checks/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Checks#index</h1>
-<p>Find me in app/views/checks/index.html.erb</p>
+<div class="wrapper">
+  <%= render "side_bar" %>
+  <%= render "main_chack" %>
+</div>
