--- a/app/views/checks/index.html.erb
+++ b/app/views/checks/index.html.erb
@@ -1,4 +1,8 @@
 <div class="wrapper">
-  <%= render "side_bar" %>
-  <%= render "main_chack" %>
+  <div class="side-bar">
+    <%= render "side_bar" %>
+  </div>
+  <div class="check">
+    <%= render "main_check" %>
+  </div>
 </div>
