サイドバーのフロント実装

--- a/app/views/checks/_side_bar.erb
+++ b/app/views/checks/_side_bar.erb
@@ -1,5 +1,21 @@
 <div class="side-bar-header">
+  <div class="header-shopname">
+    <a href="#">room</a>
+  </div>
+  <div class="create-check">
+    <a href="#">伝票を作成する</a>
+  </div>
 </div>
 
 <div class="guests">
+  <div class="guest">
+    <div class="guest-name">
+      <a href="#">けんじ</a>
+    </div>
+  </div>
+  <div class="guest">
+    <div class="guest-name">
+      <a href="#">希望</a>
+    </div>
+  </div>
 </div>
