--- a/app/assets/stylesheets/checks.css
+++ b/app/assets/stylesheets/checks.css
@@ -10,12 +10,42 @@
 .side-bar-header {
   height: 100px;
   padding: 0 20px;
+  background-color: #253141;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
+
+.header-shopname a{
+  font-size: 16px;
+  color: #FAFAFA;
+  text-decoration: none;
+}
+
+.create-check a {
+  font-size: 10px;
+  border: 1px solid lightblue;
+  padding: 14px;
+  color: deepskyblue;
+  text-decoration: none;
+}
+
 .guests {
   background-color: #2F3E51;
   height: calc(100vh - 100px);
   padding: 0 20px;
+  overflow: scroll;
 }
+
+.guest {
+  padding: 20px 0 40px;
+}
+
+.guest-name a {
+  text-decoration: none;
+  color: white;
+}
+
 .check {
   background-color: #FFFFFF;
   width: calc(100vw - 300px);
