--- a/app/views/checks/_side_bar.erb
+++ b/app/views/checks/_side_bar.erb
@@ -7,6 +7,40 @@
   </div>
 </div>
 
+<div class="todays">
+<div class="today" id="view_clock"></div>
+<script type="text/javascript">
+timerID = setInterval('clock()',500); //0.5秒毎にclock()を実行
+
+function clock() {
+	document.getElementById("view_clock").innerHTML = getNow();
+}
+
+function getNow() {
+	var now = new Date();
+	var year = now.getFullYear();
+	var mon = now.getMonth()+1; //１を足すこと
+	var day = now.getDate();
+	var hour = now.getHours();
+	var min = now.getMinutes();
+	var sec = now.getSeconds();
+
+	//出力用
+	var s = year + "年" + mon + "月" + day + "日" + hour + "時" + min + "分" + sec + "秒"; 
+	return s;
+}
+</script>
+</div>
+
+<div class="creates">
+  <div class="create-menu">
+    <a href="#">ドリンク登録</a>
+  </div>
+  <div class="create-guest">
+    <a href="#">神様登録</a>
+  </div>
+</div>
+
 <div class="guests">
   <div class="guest">
     <div class="guest-name">
