deviseに関するビューファイルの配置

--- a/app/views/checks/_main_check.html.erb
+++ b/app/views/checks/_main_check.html.erb
@@ -10,66 +10,69 @@
     </div>
   </div>
 </div>
+<div class="checkcreate">
+    <form class="menu-name">
+      <input class="menuname" type=text placeholder="シャンパン">
+    </form>
+    <form class="menu-price">
+      <input class="menuprice" type=text placeholder="¥500000">
+    </form>
+    <form class="menu-allprice">
+      <input class="menuallprice" type=text placeholder="合計金額">
+    </form>
+    <form class="spinner_area">
+      <INPUT type=button value="－" onClick="minus(this.form.q1)">
+      <INPUT class="cups" type=text name=q1 value=0 size=4>
+      <INPUT type=button value="＋" onClick="plus(this.form.q1)">
+    </form>
+    <SCRIPT language="JavaScript">
+      <!--
+      function plus(chk){
+      chk.value++;
+      if (chk.value==100) {chk.value=99}
+      }
+      function minus(chk){
+      chk.value--;
+      if (chk.value==-1) {chk.value=0}
+      }
+      // -->
+    </SCRIPT>
+    <form class="drink">
+      <input class="drinkmenu" type=button value="ドリンク追加">
+    </form>
+  </div>
 
 <div class="checks">
-  <form class="drink">
-    <input class="drinkmenu" type=button value="ドリンク追加">
-  </form>
-  <div class="checkcenter">
-    <form class="menu-name">
-      <input class="menuname" type=text placeholder="シャンパン">
-    </form>
-    <form class="menu-price">
-      <input class="menuprice" type=text placeholder="¥500000">
-    </form>
-    <form class="menu-allprice">
-      <input class="menuallprice" type=text placeholder="合計金額">
-    </form>
-    <form class="spinner_area">
-      <INPUT type=button value="－" onClick="minus(this.form.q1)">
-      <INPUT class="cups" type=text name=q1 value=0 size=4>
-      <INPUT type=button value="＋" onClick="plus(this.form.q1)">
-    </form>
-    <SCRIPT language="JavaScript">
-      <!--
-      function plus(chk){
-      chk.value++;
-      if (chk.value==100) {chk.value=99}
-      }
-      function minus(chk){
-      chk.value--;
-      if (chk.value==-1) {chk.value=0}
-      }
-      // -->
-    </SCRIPT>
+  <div class="message">
+    <div class="upper-message">
+      <div class="message-user">
+        シャンパン
+      </div>
+      <div class="message-date">
+        12:43:30
+      </div>
+    </div>
+    <div class="lower-message">
+      <div class="message-content">
+        ¥500000
+      </div>
+    </div>
   </div>
-  <div class="checkcenter">
-    <form class="menu-name">
-      <input class="menuname" type=text placeholder="シャンパン">
-    </form>
-    <form class="menu-price">
-      <input class="menuprice" type=text placeholder="¥500000">
-    </form>
-    <form class="menu-allprice">
-      <input class="menuallprice" type=text placeholder="合計金額">
-    </form>
-    <form class="spinner_area">
-      <INPUT type=button value="－" onClick="minus(this.form.q1)">
-      <INPUT class="cups" type=text name=q1 value=0 size=4>
-      <INPUT type=button value="＋" onClick="plus(this.form.q1)">
-    </form>
-    <SCRIPT language="JavaScript">
-      <!--
-      function plus(chk){
-      chk.value++;
-      if (chk.value==100) {chk.value=99}
-      }
-      function minus(chk){
-      chk.value--;
-      if (chk.value==-1) {chk.value=0}
-      }
-      // -->
-    </SCRIPT>
+
+  <div class="message">
+    <div class="upper-message">
+      <div class="message-user">
+        カクテル
+      </div>
+      <div class="message-date">
+        12:47:30
+      </div>
+    </div>
+    <div class="lower-message">
+      <div class="message-content">
+        ¥500000
+      </div>
+    </div>
   </div>
 </div>
 <div class="final-checks">
