--- a/app/views/checks/_side_bar.erb
+++ b/app/views/checks/_side_bar.erb
@@ -37,7 +37,7 @@ function getNow() {
     <a href="#">ドリンク登録</a>
   </div>
   <div class="create-guest">
-    <a href="#">神様登録</a>
+    <a href="#">ゲスト登録</a>
   </div>
 </div>
 
