カレントユーザー名（ショップ名）を伝票ページに表示する

--- a/app/views/checks/_side_bar.erb
+++ b/app/views/checks/_side_bar.erb
@@ -1,6 +1,6 @@
 <div class="side-bar-header">
   <div class="header-shopname">
-    <a href="#">room</a>
+    <%=  current_user.name %>
   </div>
   <div class="create-check">
     <a href="#">伝票を作成する</a>
