--- a/app/assets/stylesheets/checks.css
+++ b/app/assets/stylesheets/checks.css
@@ -16,8 +16,8 @@
   align-items: center;
 }
 
-.header-shopname a{
-  font-size: 16px;
+.header-shopname {
+  font-size: 20px;
   color: #FAFAFA;
   text-decoration: none;
 }
