--- a/app/assets/stylesheets/checks.css
+++ b/app/assets/stylesheets/checks.css
@@ -16,9 +16,9 @@
   align-items: center;
 }
 
-.header-shopname {
+.header-shopname a{
   font-size: 20px;
-  color: #FAFAFA;
+  color: gold;
   text-decoration: none;
 }
 
