--- a/app/views/checks/_main_check.html.erb
+++ b/app/views/checks/_main_check.html.erb
@@ -1,7 +1,7 @@
 <div class="check-header">
   <div class="left-header">
     <div class="header-guestname">
-      けんじ
+      <%= @room.room_name %>
     </div>
   </div>
   <div class="right-header">
@@ -11,74 +11,52 @@
   </div>
 </div>
 <div class="checkcreate">
-    <form class="menu-name">
-      <input class="menuname" type=text placeholder="シャンパン">
-      <%#= f.collection_select :menu, Menu.all, :menu_name, :menu_name, class="menuname", include_blank: "ドリンク選択"%>
-    </form>
-    <form class="menu-price">
-      <input class="menuprice" type=text placeholder="¥500000">
-    </form>
-    <form class="menu-allprice">
-      <input class="menuallprice" type=text placeholder="合計金額">
-    </form>
-    <form class="spinner_area">
-      <INPUT type=button value="－" onClick="minus(this.form.q1)">
-      <INPUT class="cups" type=text name=q1 value=0 size=4>
-      <INPUT type=button value="＋" onClick="plus(this.form.q1)">
-    </form>
-    <SCRIPT language="JavaScript">
-      <!--
-      function plus(chk){
-      chk.value++;
-      if (chk.value==100) {chk.value=99}
-      }
-      function minus(chk){
-      chk.value--;
-      if (chk.value==-1) {chk.value=0}
-      }
-      // -->
-    </SCRIPT>
-    <form class="drink">
-      <input class="drinkmenu" type=button value="ドリンク追加">
-    </form>
-  </div>
+  <%= form_with model: [@room, @check], class: 'form', local: true do |f| %>
+    
+    <%= f.collection_select :menuname, @menus, :menu_name, :menu_name, {include_blank: "ドリンク選択"}, {class:"menuname", id:"ab"} %>
+
+      <INPUT type=button value="－" onClick="minus(this.form.gh)">
+    <%= f.text_field :cup,  placeholder: 0, class: 'cups', id: 'gh', size: 4 %>
+      <INPUT type=button value="＋" onClick="plus(this.form.gh)">
+    
+    <%= f.collection_select :menuprice, @menus, :price, :price, {include_blank: "金額選択"}, {class: 'menuprice',  id: 'cd', onchange:"myfunc()"} %>
+      
+    <%= f.text_field :menuallprice, class: 'menuallprice', placeholder: '合計金額', id: 'ef'%>
+
+    <%=f.submit class:"drinkmenu", value: 'オーダー追加' %>
+
+      <SCRIPT>
+        function myfunc(){
+          let price = document.getElementById("cd").value;
+          let cup = document.getElementById("gh").value
+          document.getElementById("ef").value = price * cup;
+        }
+      </SCRIPT>
+    
+      <SCRIPT>
+        function plus(chk){
+        chk.value++;
+        if (chk.value==100) {chk.value=99}
+        }
+        function minus(chk){
+        chk.value--;
+        if (chk.value==-1) {chk.value=0}
+        }
+      </SCRIPT>
+  <% end %>
+</div>
 
 <div class="checks">
-  <div class="message">
-    <div class="upper-message">
-      <div class="message-user">
-        シャンパン
-      </div>
-      <div class="message-date">
-        12:43:30
-      </div>
-    </div>
-    <div class="lower-message">
-      <div class="message-content">
-        ¥500000
-      </div>
-    </div>
-  </div>
-
-  <div class="message">
-    <div class="upper-message">
-      <div class="message-user">
-        カクテル
-      </div>
-      <div class="message-date">
-        12:47:30
-      </div>
-    </div>
-    <div class="lower-message">
-      <div class="message-content">
-        ¥500000
-      </div>
-    </div>
-  </div>
+  <%= render partial: 'check', collection: @checks %>
 </div>
 <div class="final-checks">
   <p>お会計</p>
-  <form class="final-check">
-    <input type=text placeholder="総合計金額">
-  </form>
+  <%= form_with model: [@room, @allcheck], class: 'final-check', local: true do |f| %>
+  <div class="tex">
+    <%= f.text_field :allcheck, value:"¥#{Check.where(room_id: params[:room_id]).sum(:menuallprice)}" %>
+  </div>
+  <div class="sub">
+    <%=f.submit value: 'おあいそ', class: 'oaiso'%>
+  </div>
+  <% end %>
 </div>
