--- a/app/views/checks/_side_bar.erb
+++ b/app/views/checks/_side_bar.erb
@@ -8,15 +8,16 @@
 </div>
 
 <div class="todays">
-<div class="today" id="view_clock"></div>
+  <div class="today" id="view_clock"></div>
+</div>
 <script type="text/javascript">
-timerID = setInterval('clock()',500); //0.5秒毎にclock()を実行
+  timerID = setInterval('clock()',500); //0.5秒毎にclock()を実行
 
-function clock() {
+  function clock() {
 	document.getElementById("view_clock").innerHTML = getNow();
-}
+  }
 
-function getNow() {
+  function getNow() {
 	var now = new Date();
 	var year = now.getFullYear();
 	var mon = now.getMonth()+1; //１を足すこと
@@ -28,9 +29,8 @@ function getNow() {
 	//出力用
 	var s = year + "年" + mon + "月" + day + "日" + hour + "時" + min + "分" + sec + "秒"; 
 	return s;
-}
+  }
 </script>
-</div>
 
 <div class="creates">
   <div class="create-menu">
@@ -45,7 +45,7 @@ function getNow() {
 <% current_user.rooms.each do |room| %>
   <div class="guest">
     <div class="guest-name">
-      <a href="#"><%= room.room_name %></a>
+      <%= link_to room.room_name, room_checks_path(room) %>
     </div>
   </div>
 <% end %>
