--- a/app/assets/stylesheets/checks.css
+++ b/app/assets/stylesheets/checks.css
@@ -107,7 +107,7 @@
   color: #FAFAFA;
   background-color: black;
   border: 5px solid transparent;
-  border-image: linear-gradient(to bottom right, #b827fc 0%, #2c90fc 25%, #b8fd33 50%, #fec837 75%, #fd1892 100%);
+  background-color: darkgray;
   border-image-slice: 1;
 }
 
